--- a/milestone3/static/css/style.css
+++ b/milestone3/static/css/style.css
@@ -84,3 +84,10 @@ label.searchlabel.active {
 .padleft {
     padding-left: 5px;
 }
+
+label.editname {
+    color: black;
+    font-weight: 700;
+    font-size: larger;
+    margin-bottom: 10px;
+}
