--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -7,12 +7,13 @@
     <ul class="collapsible">
         {% for treatment in treatments %}
         <li>
-        {% if user.fullname|lower == treatment.treatment_client|lower %}
+        {% if user.username|lower == treatment.tusername|lower %}
             <div class="collapsible-header white-text brown darken-4 text-shadow">
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                     {% if session.user|lower == treatment.created_by|lower %}
                     <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small green lighten-1 edit">Edit</a>
+                    <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1 edit">Delete</a>
                     {% endif %}
                 </div>
                 <div class="col s9">
@@ -61,23 +62,12 @@
         <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
     {% endif %}
     <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user.id) }}">
+        <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user._id) }}">
             <!-- client username -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-user-edit prefix brown-text text-darken-4"></i>
-                    <input id="username" name="username" minlength="3" maxlength="25"
-                        type="text" value="{{ user.username }}" class="validate" required>
-                    <label for="username">Client Username</label>
-                </div>
-            </div>
-             <!-- password -->
-             <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-user-lock prefix brown-text text-darken-4"></i>
-                    <input id="password" name="password" type="password" minlength="5"
-                        maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" value="{{ user.password }}" required>
-                    <label for="password">Password</label>
+                    <label class="editname">{{ user.username }}</label>
                 </div>
             </div>
             <!-- client name -->
