Client records with visuals and report

--- a/milestone3/templates/report.html
+++ b/milestone3/templates/report.html
@@ -2,10 +2,9 @@
 {% block content %}
 
 {% set list = [] %}
-<!-- {% for treatment in treatments %}
-  {{ treatment.treatment_name }} 
-  {{ list.append(treatment.treatment_name) }}
-{% endfor %} -->
+{% for treatment in treatments %}
+ <p class="hide"> {{ list.append(treatment.treatment_name)}} </p>
+{% endfor %}
 
 {% set counter = {
   'shoulder': 0,
