--- a/milestone3/static/css/style.css
+++ b/milestone3/static/css/style.css
@@ -77,6 +77,12 @@ label.searchlabel.active {
     font-size: 20px;
 }
 
+.smallbold {
+    font-size: 16px;
+    font-weight: 500;
+    padding: 0;
+}
+
 .tnumrep {
     font-size: 22px;
 }
@@ -90,4 +96,28 @@ label.editname {
     font-weight: 700;
     font-size: larger;
     margin-bottom: 10px;
+}
+
+.antpos {
+    background-image: url(../images/antpos.png) ;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover;
+    width: 100%;
+    height: 275px;
+}
+body > main > div > div:nth-child(2) > div.col > table {
+    line-height: 0;
+    font-size: 12px;
+}
+.pad10 {
+    padding: 12px 5px;
+    min-width: 150px;
+}
+
+body > main > div > div:nth-child(2) > div.col {
+    left: 50px;
+    /* transform: translateX(50%);
+    left: -50%;
+    background-color: brown; */
 }
