--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -1,13 +1,218 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="brown-text text-darken-4 center-align">Client Records</h3>
+<h3 class="brown-text text-darken-4 center-align">{{ user.fullname }} Records</h3>
+<div class="row card-panel grey lighten-5">
+    <div class="col s12 m6">
+
+        <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user._id) }}">
+            <!-- client username -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-user-edit prefix brown-text text-darken-4"></i>
+                    <label class="editname">{{ user.username }}</label>
+                </div>
+            </div>
+            <!-- client name -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-user prefix brown-text text-darken-4"></i>
+                    <input id="fullname" name="fullname" minlength="3" maxlength="25" type="text"
+                        value="{{ user.fullname }}" class="validate" required>
+                    <label for="fullname">Client Name</label>
+                </div>
+            </div>
+            <!-- client DOB -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-calendar-alt prefix brown-text text-darken-4"></i>
+                    <input id="dob" name="dob" minlength="3" maxlength="25" type="text" value="{{ user.dob }}"
+                        class="validate" required>
+                    <label for="dob">Client Date of Birth</label>
+                </div>
+            </div>
+            <!-- client Email -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-envelope prefix brown-text text-darken-4"></i>
+                    <input id="email" name="email" minlength="3" maxlength="25" type="text" value="{{ user.email }}"
+                        class="validate" required>
+                    <label for="email">Client Email</label>
+                </div>
+            </div>
+            <!-- client Phone -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fas fa-phone prefix brown-text text-darken-4"></i>
+                    <input id="phone" name="phone" minlength="3" maxlength="25" type="text" value="{{ user.phone }}"
+                        class="validate" required>
+                    <label for="phone">Client Phone</label>
+                </div>
+            </div>
+            <!-- submit button -->
+            <div class="row">
+                <div class="col s12 center-align">
+                    <a href="{{ url_for('get_clients') }}" class="btn-large red text-shadow">
+                        Cancel <i class="fas fa-times-circle right"></i>
+                    </a>
+                    <button type="submit" class="btn-large brown darken-1 text-shadow">
+                        Edit Client <i class="fas fa-edit right"></i>
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <div class="col s12 m6">
+        <div class="antpos">
+        </div>
+{% set list = [] %}
+
+{% if treatments|length > 0 %}
+    {% for treatment in treatments %}
+    {% if user.username|lower == treatment.tusername|lower %}
+    <p class="hide"> {{ list.append(treatment.treatment_name)}} </p>
+    {% endif%}
+{% endfor %}
+{% endif %}
+
+{% set counter = {
+  'shoulder': 0,
+  'back': 0,
+  'knee': 0,
+  'ankle': 0,
+  'hip': 0,
+  'elbow': 0,
+  'chest': 0,
+  'quad': 0,
+  'hamstring': 0,
+  'arm': 0,
+  'other': 0
+  } %}
+
+{% macro increment(dct, key, inc=1)%}
+    {% if dct.update({key: dct[key] + inc}) %} {% endif %}
+{% endmacro %}
+
+    <div class="col">
+      <table class="compressed tabletext">
+        <tbody>
+          <tr>
+            <td class="pad10"> {% for item in list %}
+              {% if item == "shoulder" %}
+                {{ increment(counter, 'shoulder') }}  
+              {% endif %}
+            {% endfor %}
+            Shoulder treatments : </td>
+            <td class="smallbold"> {{ counter.shoulder }}</td>
+          </tr>
+          <tr>
+            <td class="pad10">{% for item in list %}
+              {% if item == "back" %}
+                {{ increment(counter, 'back') }}  
+              {% endif %}
+            {% endfor %}
+            Back treatments : </td>
+            <td class="smallbold">{{ counter.back }}</td>
+          </tr>
+          <tr>
+            <td class="pad10">{% for item in list %}
+              {% if item == "knee" %}
+                {{ increment(counter, 'knee') }}  
+              {% endif %}
+            {% endfor %}
+            Knee treatments : </td>
+            <td class="smallbold">{{ counter.knee }}</td>
+          </tr>
+          <tr>
+            <td class="pad10">{% for item in list %}
+              {% if item == "ankle" %}
+                {{ increment(counter, 'ankle') }}  
+              {% endif %}
+            {% endfor %}
+            Ankle treatments :  </td>
+            <td class="smallbold">{{ counter.ankle }}</td>
+          </tr>
+          <tr>
+            <td class="pad10">{% for item in list %}
+              {% if item == "hamstring" %}
+                {{ increment(counter, 'hamstring') }}  
+              {% endif %}
+              {% endfor %}
+              Hamstring treatments : </td>
+            <td class="smallbold">{{ counter.hamstring }}</td>
+        </tr>
+        <tr>
+            <td class="pad10">{% for item in list %}
+              {% if item == "arm" %}
+                {{ increment(counter, 'arm') }}  
+              {% endif %}
+              {% endfor %}
+              Arm treatments : </td>
+            <td class="smallbold">{{ counter.arm }}</td>
+        </tr>
+        </tbody>
+        </table>
+    </div> 
+    <div class="col m6">
+        <table class="striped tabletext">
+        <tbody>
+        <tr>
+          <td class="pad10"> {% for item in list %}
+            {% if item == "elbow" %}
+              {{ increment(counter, 'elbow') }}  
+            {% endif %}
+            {% endfor %}
+            Elbow treatments : </td>
+          <td class="smallbold">{{ counter.elbow }}</td>
+        </tr>
+        <tr>
+          <td class="pad10">{% for item in list %}
+            {% if item == "chest" %}
+              {{ increment(counter, 'chest') }}  
+            {% endif %}
+            {% endfor %}
+            Chest treatments : </td>
+          <td class="smallbold">{{ counter.chest }}</td>
+        </tr>
+        <tr>
+          <td class="pad10">{% for item in list %}
+            {% if item == "quad" %}
+              {{ increment(counter, 'quad') }}  
+            {% endif %}
+            {% endfor %}
+            Quad treatments : </td>
+          <td class="smallbold">{{ counter.quad }}</td>
+        </tr>
+        <tr>
+            <td class="pad10">{% for item in list %}
+              {% if item == "hip" %}
+                {{ increment(counter, 'hip') }}  
+              {% endif %}
+            {% endfor %}
+            Hip treatments : </td>
+            <td class="smallbold">{{ counter.hip }}</td>
+        </tr>
+        <tr>
+          <td class="pad10">{% for item in list %}
+            {% if item == "other" %}
+              {{ increment(counter, 'other') }}  
+            {% endif %}
+            {% endfor %}
+            Other treatments : </td>
+          <td class="smallbold">{{ counter.other }}</td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+    </div>
+</div>
 
     {% if treatments|length > 0 %}
     <ul class="collapsible">
         {% for treatment in treatments %}
-        <li>
         {% if user.username|lower == treatment.tusername|lower %}
+        <li>
             <div class="collapsible-header white-text brown darken-4 text-shadow">
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
@@ -54,71 +259,12 @@
                     </div>
                 </div>
             </div>
-            {% endif %}
         </li>
+            {% endif %}
         {% endfor %}
     </ul>
     {% else %}
         <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
     {% endif %}
-    <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user._id) }}">
-            <!-- client username -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-user-edit prefix brown-text text-darken-4"></i>
-                    <label class="editname">{{ user.username }}</label>
-                </div>
-            </div>
-            <!-- client name -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-user prefix brown-text text-darken-4"></i>
-                    <input id="fullname" name="fullname" minlength="3" maxlength="25"
-                        type="text" value="{{ user.fullname }}" class="validate" required>
-                    <label for="fullname">Client Name</label>
-                </div>
-            </div>
-             <!-- client DOB -->
-             <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-calendar-alt prefix brown-text text-darken-4"></i>
-                    <input id="dob" name="dob" minlength="3" maxlength="25"
-                        type="text" value="{{ user.dob }}" class="validate" required>
-                    <label for="dob">Client Date of Birth</label>
-                </div>
-            </div>
-            <!-- client Email -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-envelope prefix brown-text text-darken-4"></i>
-                    <input id="email" name="email" minlength="3" maxlength="25"
-                        type="text" value="{{ user.email }}" class="validate" required>
-                    <label for="email">Client Email</label>
-                </div>
-            </div>
-            <!-- client Phone -->
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="fas fa-phone prefix brown-text text-darken-4"></i>
-                    <input id="phone" name="phone" minlength="3" maxlength="25"
-                        type="text" value="{{ user.phone }}" class="validate" required>
-                    <label for="phone">Client Phone</label>
-                </div>
-            </div>
-            <!-- submit button -->
-            <div class="row">
-                <div class="col s12 center-align">
-                    <a href="{{ url_for('get_clients') }}" class="btn-large red text-shadow">
-                        Cancel <i class="fas fa-times-circle right"></i>
-                    </a>
-                    <button type="submit" class="btn-large brown darken-1 text-shadow">
-                        Edit Client <i class="fas fa-edit right"></i>
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
-
 
 {% endblock %}
