Resited JS module so no conflicts

--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -267,4 +267,6 @@
         <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
     {% endif %}
 
+
+<script src="{{ url_for('static', filename='js/script_fullname.js') }}"></script>
 {% endblock %}
