--- a/milestone3/templates/add_client.html
+++ b/milestone3/templates/add_client.html
@@ -71,4 +71,5 @@
         </form>
     </div>
    
+<script src="{{ url_for('static', filename='js/script_fullname.js') }}"></script>
 {% endblock %}
