--- a/milestone3/templates/add_treatment.html
+++ b/milestone3/templates/add_treatment.html
@@ -135,6 +135,7 @@
             </div>
         </form>
     </div>
+    <script src="{{ url_for('static', filename='js/script_fullname.js') }}"></script>
 
 {% endblock %}
 
