--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col s12 m4">
                     <a href="{{ url_for('get_treatments') }}" class="red btn text-shadow reseter">Reset</a>
-                    <button type="submit" class="brown darken-1 btn text-shadow reseter">
+                    <button type="submit" class="brown darken-1 btn text-shadow reseter gap">
                         Search
                     </button>
                 </div>
