Added team and google map

--- a/milestone3/static/css/style.css
+++ b/milestone3/static/css/style.css
@@ -130,6 +130,8 @@ body > main > div > div:nth-child(2) > div.col {
 .steps {
     margin: 0 0px;
     width: 200px;
+    border-radius: 50%;
+    box-shadow: 3px 3px 3px grey;
 }
 .stepTitle {
     font-size: 40px;
@@ -182,4 +184,23 @@ div.col.s2 {
 
 .therapists {
     font-size: 26px;
+}
+.profilepic {
+    border-radius: 50%;
+    margin: auto 0;
+    top: 0;
+    width: 80%;
+    border: 1px solid rgb(0, 0, 139, 0.8);
+    box-shadow: 3px 3px 3px darkblue;
+}
+
+.cta {
+    border-radius: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: 30px;
+}
+
+.imap {
+    width: 100%;
 }
