--- a/milestone3/templates/home.html
+++ b/milestone3/templates/home.html
@@ -15,12 +15,12 @@
         <br><br>
 
       </div> -->
-    <div class="row">
+    <div id="bannersm" class="row">
       <div><img class="bannersm center-align" src="../static/images/frontPageBanner.jpg" alt="Sports Therapy Picture"></div>
     </div>
 
 
-<div class="row">
+<div id="stepTitle" class="row">
     <div class="col s12 stepTitle center-align">How it works</div>
     <div class="grid-example col s12 m6 l4 center-align">
       <a href="{{ url_for('register') }}">
