--- a/milestone3/templates/base.html
+++ b/milestone3/templates/base.html
@@ -86,51 +86,48 @@
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
     {% block scripts %}
     {% endblock %}
-
-    <!--Footer-->
     <footer>
-        <div class="row">
-            <div class="col s12 m6 l4 center bg-dark">
+        <div class="footer-new">
+            <div class="row">
                 <!--Footer Left-->
-                <div class="footer-left col s6 m7 ">
+                <div class="footer-left col s6 ">
                     <!--The link is the geographical address on google maps used by Balanced Training-->
                     <a id="" class="left"
                         href="https://maps.google.com/maps/dir//Balanced+Training+Unit+A3,+Seedbed+Business+Centre+Vanguard+Way+Southend-on-Sea+SS3+9QY/@51.534883,0.7957074,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x47d927b7c1b1e26d:0x8d658dbbe5f7866"
                         target="_blank">
                         <p>Unit A3</p>
-                        <p class="">Seedbed Business Centre,</p>
+                        <p>Seedbed Business Centre,</p>
                         <p>Vanguard Way,</p>
                         <p>Shoeburyness,</p>
                         <p>SS3 0JB</p>
                     </a>
                     <br>
                     <p><i class=""></i><a class="" href="Tel:01702382390"> 01702 382390</a></p>
-
-
                 </div>
                 <!--Footer Right-->
-                <div class="col s6 m5 right">
-                    <div class="footer-text-right s6">Follow us on</div>
-                    <div class="">
+                <div class="col s6 format">
+                    <div class="follow">Follow us on</h5>
+                    <div class="footer-text-right">
+                        
                         <div class="social-bottom">
                             <!--The link is the current Facebook address used by Balanced Training-->
                             <a class="icon-link" href="https://facebook.com/BalancedPTS/" target="_blank"
                                 title="Link to Facebook">
-                                <i class="fab fa-facebook"></i></a></div>
+                                <i class="fab fa-facebook icon-size"></i></a></div>
                         <div class="social-bottom">
                             <!--The link is the current instagram address used by Balanced Training-->
                             <a class="icon-link" href="https://instagram.com/balanced_training" target="_blank"
                                 title="Link to Instagram">
-                                <i class="fab fa-instagram"></i></a></div>
+                                <i class="fab fa-instagram icon-size"></i></a></div>
                         <div class="social-bottom">
                             <!--The link is the current linkedin address used by Balanced Training-->
-                            <a class="icon-link" href="https://linkedin.com/company/balanced-training/" target="_blank"
-                                title="Link to Linked In">
+                            <a class="icon-link" href="https://linkedin.com/company/balanced-training/"
+                                target="_blank" title="Link to Linked In">
                                 <i class="fab fa-linkedin icon-size"></i></a></div>
-                    </div>
-                </div>
+                            </div>
             </div>
         </div>
     </footer>
-</body>
-</html>
+    </body>
+
+    </html>
