--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -6,6 +6,15 @@
     <div class="col s12 m6">
 
         <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user._id) }}">
+          <div class="row hide">
+            <div class="input-field col s12">
+                    <i class="fas fa-user-edit prefix brown-text text-darken-4"></i>
+                    <select id="user_id" name="user_id" class="validate" required>
+                        <option value="{{ user._id }}" disabled selected>Choose Client</option>
+                    </select>
+                    <label for="user_id">Client</label>
+                    </div>
+          </div>
             <!-- client username -->
             <div class="row">
                 <div class="input-field col s12">
@@ -207,18 +216,21 @@
     </div>
     </div>
 </div>
+<!-- <h5>{{ user._id }} - user._id works {{ user.fullname }} - user.fullname works </h5> -->
 
     {% if treatments|length > 0 %}
     <ul class="collapsible">
         {% for treatment in treatments %}
-        {% if user.username|lower == treatment.tusername|lower %}
+        {% if user._id|string == treatment.user_id|string %}
+        <!-- {{ treatment.user_id }}  -->
+        <!-- <h5>{{ user._id }} - user._id works {{ user.fullname }} - user.fullname works </h5> -->
         <li>
             <div class="collapsible-header white-text brown darken-4 text-shadow">
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                 </div>
                 <div class="col s7">
-                    <strong class="larger">  {{ treatment.treatment_client }} - {{ treatment.treatment_name|capitalize }}</strong> : {{ treatment.treatment_date }}
+                    <strong class="larger"> {{ user.fullname }} {{ treatment.treatment_client }} - {{ treatment.treatment_name|capitalize }}</strong> : {{ treatment.treatment_date }}
                         
                     {% if treatment.follow_up == "on" %}
                     <i class="fas fa-exclamation-circle brown-text text-lighten-2 tooltipped"
@@ -252,13 +264,11 @@
                 </div>
             </div>
         </li>
-            {% endif %}
+        {% endif %}
         {% endfor %}
     </ul>
     {% else %}
         <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
     {% endif %}
 
-
-<script src="{{ url_for('static', filename='js/script_fullname.js') }}"></script>
 {% endblock %}
