--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -23,7 +23,7 @@
     
     {% if treatments|length > 0 %}
     <ul class="collapsible">
-        {% for treatment in treatments|sort(attribute='treatment_client') %}
+        {% for treatment in treatments %}
         {% if treatment.tusername|lower == session["user"] or session["user"] == "gadmin" %}
         <li>
             <div class="collapsible-header white-text brown darken-4 text-shadow">
@@ -33,18 +33,20 @@
                     <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small green lighten-1 edit">Edit</a>
                     {% endif %}
                 </div>
-                <div class="col s9">
-                    <strong class="larger">  {{ treatment.treatment_client }} - {{ treatment.treatment_name|capitalize }} </strong> : {{ treatment.treatment_date }} :
-                        {% if treatment.treatment_name|lower == "back" %}
-                        <a class="right padleft" href="../static/advice/Exercise Advice Sheet - Back.pdf" download>Recovery Advice - <i class="fas fa-download"></i></a>
-                        {% elif treatment.treatment_name|lower == "shoulder" %}
-                        <a class="right padleft" href="../static/advice/Exercise Advice Sheet - Shoulder.pdf" download>Recovery Advice - <i class="fas fa-download"></i></a>
-                        {% elif treatment.treatment_name|lower == "knee" %}
-                        <a class="right padleft" href="../static/advice/Exercise Advice Sheet - Knee.pdf" download>Recovery Advice - <i class="fas fa-download"></i></a>
-                        {% else %}
-                        <a class="right padleft" href="../static/advice/Exercise Advice Sheet.pdf" download>Recovery Advice - <i class="fas fa-download"></i></a>
+                <div class="col s9"> 
+                    <!-- removed in jinja treatment.treatment_client  -->
+                    <strong class="larger"> 
 
-                        {% endif %}
+                                {{ treatment.treatment_client }} - {{ treatment.treatment_name|capitalize }} </strong> : {{ treatment.treatment_date }} :
+                                    {% if treatment.treatment_name|lower == "back" %}
+                        <a class="right padleft" href="../static/advice/Exercise Advice Sheet - Back.pdf" download>Recovery Advice - <i class="fas fa-download"></i></a>
+                                    {% elif treatment.treatment_name|lower == "shoulder" %}
+                        <a class="right padleft" href="../static/advice/Exercise Advice Sheet - Shoulder.pdf" download>Recovery Advice - <i class="fas fa-download"></i></a>
+                                    {% elif treatment.treatment_name|lower == "knee" %}
+                        <a class="right padleft" href="../static/advice/Exercise Advice Sheet - Knee.pdf" download>Recovery Advice - <i class="fas fa-download"></i></a>
+                                    {% else %}
+                        <a class="right padleft" href="../static/advice/Exercise Advice Sheet.pdf" download>Recovery Advice - <i class="fas fa-download"></i></a>
+                                    {% endif %}
                     {% if treatment.follow_up == "on" %}
                     <i class="fas fa-exclamation-circle brown-text text-lighten-2 tooltipped"
                         data-position="right" data-tooltip="URGENT!"></i>
