--- a/milestone3/templates/edit_treatment.html
+++ b/milestone3/templates/edit_treatment.html
@@ -9,9 +9,9 @@
             <div class="row hide">
                 <div class="input-field col s12">
                     <i class="fas fa-pencil-alt prefix brown-text text-darken-4"></i>
-                    <input id="treatment_client" name="treatment_client" maxlength="50"
-                        type="text" class="validate" value="{{ treatment.treatment_client }}">
-                    <label for="treatment_client">Treatment Client Name</label>
+                    <input id="user_id" name="user_id" maxlength="50"
+                        type="text" class="validate" value="{{ treatment.user_id }}">
+                    <label for="user_id">Treatment Client Name</label>
                 </div>
             </div>
             <!-- treatment name -->
