--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -23,21 +23,25 @@
     
     {% if treatments|length > 0 %}
     <ul class="collapsible">
-        {% for treatment in treatments %}
-        {% if treatment.tusername|lower == session["user"] or session["user"] == "gadmin" %}
-        <li>
+    {% for treatment in treatments %}
+        {% if treatment.user_id|lower == session["user"] or session["user"] == "gadmin" %}         
+            <li>
             <div class="collapsible-header white-text brown darken-4 text-shadow">
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                     {% if session.user|lower == treatment.created_by|lower %}
                     <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small green lighten-1 edit">Edit</a>
+                    <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1 delete">Delete</a>
                     {% endif %}
                 </div>
                 <div class="col s9"> 
                     <!-- removed in jinja treatment.treatment_client  -->
                     <strong class="larger"> 
-
-                                {{ treatment.treatment_client }} - {{ treatment.treatment_name|capitalize }} </strong> : {{ treatment.treatment_date }} :
+                        {% for user in users %}
+                            {% if treatment.user_id|lower == user.username|lower %}        
+                                {{ user.fullname }} 
+                            {% endif %}
+                        {% endfor %} - {{ treatment.treatment_name|capitalize }} </strong> : {{ treatment.treatment_date }} :
                                     {% if treatment.treatment_name|lower == "back" %}
                         <a class="right padleft" href="../static/advice/Exercise Advice Sheet - Back.pdf" download>Recovery Advice - <i class="fas fa-download"></i></a>
                                     {% elif treatment.treatment_name|lower == "shoulder" %}
@@ -47,10 +51,13 @@
                                     {% else %}
                         <a class="right padleft" href="../static/advice/Exercise Advice Sheet.pdf" download>Recovery Advice - <i class="fas fa-download"></i></a>
                                     {% endif %}
+                        
+
                     {% if treatment.follow_up == "on" %}
                     <i class="fas fa-exclamation-circle brown-text text-lighten-2 tooltipped"
                         data-position="right" data-tooltip="URGENT!"></i>
                     {% endif %}
+                    
                 </div>
             </div>
             <div class="collapsible-body">
@@ -75,10 +82,11 @@
         </li>
         {% endif %}
         {% endfor %}
+
     </ul>
     
     {% else %}
-    <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+    <h3 class="red-text text-darken-4 center-align">No Treatments Found</h3>
     {% endif %}
    
 {% endblock %}
